--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     
     <link rel="canonical" href="http://example.org/" />
 
-    <link rel="stylesheet" type="text/css" href="css/normalize.min.css" media="print" onload="this.media='all'">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link disabled id="dark-theme" rel="stylesheet" href="css/dark.css">
+    <link rel="stylesheet" type="text/css" href="/css/normalize.min.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link disabled id="dark-theme" rel="stylesheet" href="/css/dark.css">
 
     <script src="http://example.org//js/svg-injector.min.js"></script>
     <script src="http://example.org//js/feather-icons.min.js"></script>
